--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,40 @@ Homestead.json
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
+
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
+
+/app/Console/Kernel.php
+/app/Exceptions
+/app/Http
+/app/Providers/
+/app/User.php
+/database
+/bootstrap
+/config
+/storage
+/routes/api
+/routes/channels.php
+/routes/api.php
+
+
+
+/tests
+.env.example
+.gitattributes
+artisan
+phpunit.xml
+readme.md
+server.php
+
