--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,58 @@
+/app/Console/Kernel.php
+/app/Exceptions/Handler.php
+/app/Http/Controllers/Auth/ForgotPasswordController.php
+/app/Http/Controllers/Auth/LoginController.php
+/app/Http/Controllers/Auth/RegisterController.php
+/app/Http/Controllers/Auth/ResetPasswordController.php
+/app/Http/Controllers/Auth/VerificationController.php
+/app/Http/Controllers/Controller.php
+/app/Http/Middleware/Authenticate.php
+/app/Http/Middleware/CheckForMaintenanceMode.php
+/app/Http/Middleware/EncryptCookies.php
+/app/Http/Middleware/RedirectIfAuthenticated.php
+/app/Http/Middleware/TrimStrings.php
+/app/Http/Middleware/TrustProxies.php
+/app/Http/Middleware/VerifyCsrfToken.php
+/app/Http/Kernel.php
+/app/Providers/AppServiceProvider.php
+/app/Providers/AuthServiceProvider.php
+/app/Providers/BroadcastServiceProvider.php
+/app/Providers/EventServiceProvider.php
+/app/Providers/RouteServiceProvider.php
+/app/User.php
+/bootstrap
+/config
+/database
+/routes/api.php
+/routes/channels.php
+/routes/console.php
+/storage
+/tests
+/vendor
+.editorconfig
+.env
+.env.example
+.gitattributes
+artisan
+composer.json
+composer.lock
+package.json
+phpunit.xml
+server.php
+webpack.mix.js
+yarn-error.log
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+.env
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+
+
 vendor/
 node_modules/
 npm-debug.log
